--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
     "@mantine/core": "^4.1.1",
     "@mantine/hooks": "^4.1.1",
     "react": "^18.0.0",
